tests/snapshots/snapshot__cache_poisoning-14.snap
---
source: tests/snapshot.rs
expression: "zizmor().workflow(workflow_under_test(\"cache-poisoning/issue-378-repro.yml\")).run()?"
snapshot_kind: text
---
No findings to report. Good job!
