tests/snapshots/snapshot__cache_poisoning-7.snap
---
source: tests/snapshot.rs
expression: "zizmor().workflow(workflow_under_test(\"cache-poisoning/no-cache-aware-steps.yml\")).run()?"
snapshot_kind: text
---
No findings to report. Good job!
