tests/snapshots/snapshot__cache_poisoning.snap
---
source: tests/snapshot.rs
expression: "zizmor().workflow(workflow_under_test(\"cache-poisoning/caching-disabled-by-default.yml\")).run()?"
snapshot_kind: text
---
No findings to report. Good job!
